spring-hex-practice/src/main/java/com/example/springhexpractice/controller/error/CheckTrainException.java
package com.example.springhexpractice.controller.error;

public class CheckTrainException extends RuntimeException{
////    private final String errorMessage;
////
////    public CheckTrainException(String errorMessage) {
////        this.errorMessage = errorMessage;
////    }
////
////    public String getErrorMessage() {
////        return errorMessage;
////    }
}
